--- a/Login/html/RecuperarContrasenia.html
+++ b/Login/html/RecuperarContrasenia.html
@@ -20,6 +20,6 @@
     <input type="text" id="ContraseniaConfirmar">
     <br>
     <br>
-    <a href="index.html"><input type="submit" value="Confirmar" id="submitConfirmar"></a>
+    <a href="Formularios.html"><input type="submit" value="Confirmar" id="submitConfirmar"></a>
 </body>
 </html>
